@@ -3,7 +3,7 @@
 
 +NAME("bertrpc_server").
 
-+VSN("bbf1.0").
++VSN("bert1.0").
 
 +TYPES
 
